--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <body>
         <h1>Odin Recipes</h1>
 
-        <a href="./recipes/lasagna.html">How to make Lasagna</a>
+        <a href="./recipes/lasagna.html" alt="This is a picture of a lasagna">How to make Lasagna</a>
     </body>
 </html>
