--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Recipes - Home</title>
-    </head>
-    <body>
-        <h1>Odin Recipes</h1>
-
-        <a href="./recipes/lasagna.html" alt="This is a picture of a lasagna">How to make Lasagna</a>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Recipes - Home</title>
+  </head>
+  <body>
+    <h1>Odin Recipes</h1>
+    <ul>
+      <li>
+        <a href="./recipes/lasagna.html">How to make Lasagna</a></li>
+      <li>
+        <a href="./recipes/banana_bread.html">How to make Banana bread</a>
+      </li>
+    </ul>
+  </body>
 </html>
