Add banana bread recipe page content and alt to images

--- a/recipes/banana_bread.html
+++ b/recipes/banana_bread.html
@@ -3,15 +3,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Recipes - Lasagna</title>
+    <title>Recipes - Banana bread</title>
   </head>
   <body>
-    <h1>Lasagna</h1>
+    <h1>Banana bread</h1>
 
     <img
-      src="https://www.southernliving.com/thmb/aF5ditmc5n-HNd-uUKh7dZyjezc=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Extra_Easy_Lasagna_006_4x3-41b0a478514c43e9baed0659bd362625.jpg"
-      alt="This is a picture of a lasagna"
-    />
+      src="https://media-cldnry.s-nbcnews.com/image/upload/t_fit-1000w,f_auto,q_auto:best/newscms/2023_19/1993678/easy-banana-bread-mc-2x1-230511.jpg"
+      alt="This is a picture of a banana bread"/>
     <h2>Description</h2>
     <p>
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo maxime
@@ -28,16 +27,16 @@
 
     <h2>Ingredients</h2>
     <ul>
-      <li>Pasta</li>
-      <li>Tomato sauce</li>
-      <li>Mozzarella cheese</li>
+      <li>Bananas</li>
+      <li>Flour</li>
+      <li>Eggs</li>
     </ul>
 
     <h2>Steps</h2>
     <ol>
-      <li>Grate the Mozzarella cheese</li>
-      <li>Prepare the tomato sauce</li>
-      <li>Assemble the layers</li>
+      <li>Crack the eggs</li>
+      <li>Mash the bananas</li>
+      <li>Mix in a bowl with flour</li>
       <li>Bake at 350 Farenheit</li>
       <li>... And <b>enjoy</b> !</li>
     </ol>
