Add link to omelette recipe

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
       <li>
         <a href="./recipes/banana_bread.html">How to make Banana bread</a>
       </li>
+      <li>
+        <a href="./recipes/omelette.html">How to make an Omelette</a>
+      </li>
     </ul>
   </body>
 </html>
