Add back to home page button

--- a/recipes/banana_bread.html
+++ b/recipes/banana_bread.html
@@ -10,7 +10,8 @@
 
     <img
       src="https://media-cldnry.s-nbcnews.com/image/upload/t_fit-1000w,f_auto,q_auto:best/newscms/2023_19/1993678/easy-banana-bread-mc-2x1-230511.jpg"
-      alt="This is a picture of a banana bread"/>
+      alt="This is a picture of a banana bread"
+    />
     <h2>Description</h2>
     <p>
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo maxime
@@ -40,5 +41,7 @@
       <li>Bake at 350 Farenheit</li>
       <li>... And <b>enjoy</b> !</li>
     </ol>
+
+    <a href="../index.html">Back to home page</a>
   </body>
 </html>
