--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -41,5 +41,7 @@
       <li>Bake at 350 Farenheit</li>
       <li>... And <b>enjoy</b> !</li>
     </ol>
+
+    <a href="../index.html">Back to home page</a>
   </body>
 </html>
