--- a/recipes/omelette.html
+++ b/recipes/omelette.html
@@ -42,5 +42,7 @@
       <li>Add salt and pepper</li>
       <li>... And <b>enjoy</b> !</li>
     </ol>
+
+    <a href="../index.html">Back to home page</a>
   </body>
 </html>
