Add back to top button

--- a/recipes/banana_bread.html
+++ b/recipes/banana_bread.html
@@ -43,5 +43,6 @@
     </ol>
 
     <a href="../index.html">Back to home page</a>
+    <a href="./banana_bread.html">Back to top</a>
   </body>
 </html>
