Add styling to all pages

--- a/recipes/banana_bread.html
+++ b/recipes/banana_bread.html
@@ -3,46 +3,55 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="../css/recipe.css" />
     <title>Recipes - Banana bread</title>
   </head>
   <body>
-    <h1>Banana bread</h1>
+    <div class="title">
+      <h1>Banana bread</h1>
+    </div>
+    <div class="img-center">
+      <img
+        src="https://media-cldnry.s-nbcnews.com/image/upload/t_fit-1000w,f_auto,q_auto:best/newscms/2023_19/1993678/easy-banana-bread-mc-2x1-230511.jpg"
+        alt="This is a picture of a banana bread"
+      />
+    </div>
+    <div class="content">
+      <h2>Description</h2>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo maxime
+        incidunt, veritatis, ab recusandae debitis vitae iste quibusdam,
+        expedita excepturi eum velit magni nostrum fugiat similique veniam
+        assumenda iure nemo.
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo maxime
+        incidunt, veritatis, ab recusandae debitis vitae iste quibusdam,
+        expedita excepturi eum velit magni nostrum fugiat similique veniam
+        assumenda iure nemo.
+      </p>
 
-    <img
-      src="https://media-cldnry.s-nbcnews.com/image/upload/t_fit-1000w,f_auto,q_auto:best/newscms/2023_19/1993678/easy-banana-bread-mc-2x1-230511.jpg"
-      alt="This is a picture of a banana bread"
-    />
-    <h2>Description</h2>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo maxime
-      incidunt, veritatis, ab recusandae debitis vitae iste quibusdam, expedita
-      excepturi eum velit magni nostrum fugiat similique veniam assumenda iure
-      nemo.
-    </p>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo maxime
-      incidunt, veritatis, ab recusandae debitis vitae iste quibusdam, expedita
-      excepturi eum velit magni nostrum fugiat similique veniam assumenda iure
-      nemo.
-    </p>
+      <h2>Ingredients</h2>
+      <ul>
+        <li>Bananas</li>
+        <li>Flour</li>
+        <li>Eggs</li>
+      </ul>
 
-    <h2>Ingredients</h2>
-    <ul>
-      <li>Bananas</li>
-      <li>Flour</li>
-      <li>Eggs</li>
-    </ul>
-
-    <h2>Steps</h2>
-    <ol>
-      <li>Crack the eggs</li>
-      <li>Mash the bananas</li>
-      <li>Mix in a bowl with flour</li>
-      <li>Bake at 350 Farenheit</li>
-      <li>... And <b>enjoy</b> !</li>
-    </ol>
-
-    <a href="../index.html">Back to home page</a>
-    <a href="./banana_bread.html">Back to top</a>
+      <h2>Steps</h2>
+      <ol>
+        <li>Crack the eggs</li>
+        <li>Mash the bananas</li>
+        <li>Mix in a bowl with flour</li>
+        <li>Bake at 350 Farenheit</li>
+        <li>... And <b>enjoy</b> !</li>
+      </ol>
+    </div>
+    <div class="link">
+      <a href="../index.html">Back to home page</a>
+    </div>
+    <div class="link">
+      <a href="./banana_bread.html">Back to top</a>
+    </div>
   </body>
 </html>
