--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -3,46 +3,55 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="../css/recipe.css" />
     <title>Recipes - Lasagna</title>
   </head>
   <body>
-    <h1>Lasagna</h1>
+    <div class="title">
+      <h1>Lasagna</h1>
+    </div>
+    <div class="img-center">
+      <img
+        src="https://www.southernliving.com/thmb/aF5ditmc5n-HNd-uUKh7dZyjezc=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Extra_Easy_Lasagna_006_4x3-41b0a478514c43e9baed0659bd362625.jpg"
+        alt="This is a picture of a lasagna"
+      />
+    </div>
+    <div class="content">
+      <h2>Description</h2>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo maxime
+        incidunt, veritatis, ab recusandae debitis vitae iste quibusdam,
+        expedita excepturi eum velit magni nostrum fugiat similique veniam
+        assumenda iure nemo.
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo maxime
+        incidunt, veritatis, ab recusandae debitis vitae iste quibusdam,
+        expedita excepturi eum velit magni nostrum fugiat similique veniam
+        assumenda iure nemo.
+      </p>
 
-    <img
-      src="https://www.southernliving.com/thmb/aF5ditmc5n-HNd-uUKh7dZyjezc=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/Extra_Easy_Lasagna_006_4x3-41b0a478514c43e9baed0659bd362625.jpg"
-      alt="This is a picture of a lasagna"
-    />
-    <h2>Description</h2>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo maxime
-      incidunt, veritatis, ab recusandae debitis vitae iste quibusdam, expedita
-      excepturi eum velit magni nostrum fugiat similique veniam assumenda iure
-      nemo.
-    </p>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo maxime
-      incidunt, veritatis, ab recusandae debitis vitae iste quibusdam, expedita
-      excepturi eum velit magni nostrum fugiat similique veniam assumenda iure
-      nemo.
-    </p>
+      <h2>Ingredients</h2>
+      <ul>
+        <li>Pasta</li>
+        <li>Tomato sauce</li>
+        <li>Mozzarella cheese</li>
+      </ul>
 
-    <h2>Ingredients</h2>
-    <ul>
-      <li>Pasta</li>
-      <li>Tomato sauce</li>
-      <li>Mozzarella cheese</li>
-    </ul>
-
-    <h2>Steps</h2>
-    <ol>
-      <li>Grate the Mozzarella cheese</li>
-      <li>Prepare the tomato sauce</li>
-      <li>Assemble the layers</li>
-      <li>Bake at 350 Farenheit</li>
-      <li>... And <b>enjoy</b> !</li>
-    </ol>
-
-    <a href="../index.html">Back to home page</a>
-    <a href="./lasagna.html">Back to top</a>
+      <h2>Steps</h2>
+      <ol>
+        <li>Grate the Mozzarella cheese</li>
+        <li>Prepare the tomato sauce</li>
+        <li>Assemble the layers</li>
+        <li>Bake at 350 Farenheit</li>
+        <li>... And <b>enjoy</b> !</li>
+      </ol>
+    </div>
+    <div class="link">
+      <a href="../index.html">Back to home page</a>
+    </div>
+    <div class="link">
+      <a href="./lasagna.html">Back to top</a>
+    </div>
   </body>
 </html>
