--- a/recipes/omelette.html
+++ b/recipes/omelette.html
@@ -3,47 +3,56 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="../css/recipe.css" />
     <title>Recipes - Omelette</title>
   </head>
   <body>
-    <h1>Omelette</h1>
+    <div class="title">
+      <h1>Omelette</h1>
+    </div>
+    <div class="img-center">
+      <img
+        src="https://images.radio-canada.ca/q_auto,w_991/v1/alimentation/recette/16x9/omelette-au-fromage-sur-le-pouce.jpg"
+        alt="This is a picture of an omelette"
+      />
+    </div>
+    <div class="content">
+      <h2>Description</h2>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo maxime
+        incidunt, veritatis, ab recusandae debitis vitae iste quibusdam,
+        expedita excepturi eum velit magni nostrum fugiat similique veniam
+        assumenda iure nemo.
+      </p>
+      <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo maxime
+        incidunt, veritatis, ab recusandae debitis vitae iste quibusdam,
+        expedita excepturi eum velit magni nostrum fugiat similique veniam
+        assumenda iure nemo.
+      </p>
 
-    <img
-      src="https://images.radio-canada.ca/q_auto,w_991/v1/alimentation/recette/16x9/omelette-au-fromage-sur-le-pouce.jpg"
-      alt="This is a picture of an omelette"
-    />
-    <h2>Description</h2>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo maxime
-      incidunt, veritatis, ab recusandae debitis vitae iste quibusdam, expedita
-      excepturi eum velit magni nostrum fugiat similique veniam assumenda iure
-      nemo.
-    </p>
-    <p>
-      Lorem ipsum, dolor sit amet consectetur adipisicing elit. Illo maxime
-      incidunt, veritatis, ab recusandae debitis vitae iste quibusdam, expedita
-      excepturi eum velit magni nostrum fugiat similique veniam assumenda iure
-      nemo.
-    </p>
+      <h2>Ingredients</h2>
+      <ul>
+        <li>Eggs</li>
+        <li>Milk</li>
+        <li>Cheddar cheese</li>
+      </ul>
 
-    <h2>Ingredients</h2>
-    <ul>
-      <li>Eggs</li>
-      <li>Milk</li>
-      <li>Cheddar cheese</li>
-    </ul>
-
-    <h2>Steps</h2>
-    <ol>
-      <li>Crack the eggs</li>
-      <li>Grate the cheddar cheese</li>
-      <li>Mix in a bowl with milk</li>
-      <li>Cook at medium temperature</li>
-      <li>Add salt and pepper</li>
-      <li>... And <b>enjoy</b> !</li>
-    </ol>
-
-    <a href="../index.html">Back to home page</a>
-    <a href="./omelette.html">Back to top</a>
+      <h2>Steps</h2>
+      <ol>
+        <li>Crack the eggs</li>
+        <li>Grate the cheddar cheese</li>
+        <li>Mix in a bowl with milk</li>
+        <li>Cook at medium temperature</li>
+        <li>Add salt and pepper</li>
+        <li>... And <b>enjoy</b> !</li>
+      </ol>
+    </div>
+    <div class="link">
+      <a href="../index.html">Back to home page</a>
+    </div>
+    <div class="link">
+      <a href="./omelette.html">Back to top</a>
+    </div>
   </body>
 </html>
