--- a/index.html
+++ b/index.html
@@ -4,18 +4,24 @@
   <head>
     <meta charset="UTF-8" />
     <title>Recipes - Home</title>
+    <link rel="stylesheet" href="./css/index.css" />
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-      <li>
-        <a href="./recipes/lasagna.html">How to make Lasagna</a></li>
-      <li>
-        <a href="./recipes/banana_bread.html">How to make Banana bread</a>
-      </li>
-      <li>
-        <a href="./recipes/omelette.html">How to make an Omelette</a>
-      </li>
-    </ul>
+    <div class="title">
+      <h1>Dovxx's Recipes</h1>
+    </div>
+    <div class="list">
+      <ul>
+        <li>
+          <a href="./recipes/lasagna.html">How to make Lasagna</a>
+        </li>
+        <li>
+          <a href="./recipes/banana_bread.html">How to make Banana bread</a>
+        </li>
+        <li>
+          <a href="./recipes/omelette.html">How to make an Omelette</a>
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
